--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle": "~2.1",
-        "symfony/security": "~2.1",
-        "symfony/form": "~2.1",
-        "symfony/validator": "~2.1",
+        "symfony/framework-bundle": "~2.1,!=2.5.0",
+        "symfony/security": "~2.1,!=2.5.0",
+        "symfony/form": "~2.1,!=2.5.0",
+        "symfony/validator": "~2.1,!=2.5.0",
+        "symfony/translation": "~2.1,!=2.5.0",
         "doctrine/orm": "~2.2,>=2.2.3"
     },
     "require-dev": {
