--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,25 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
-        "symfony/framework-bundle": "~2.1,!=2.5.0",
-        "symfony/security": "~2.1,!=2.5.0",
-        "symfony/form": "~2.1,!=2.5.0",
-        "symfony/validator": "~2.1,!=2.5.0",
-        "symfony/translation": "~2.1,!=2.5.0",
-        "doctrine/orm": "~2.2,>=2.2.3"
+        "php": "^5.3.3|^7.0",
+        "symfony/framework-bundle": "^2.1|^3.0",
+        "symfony/security": "^2.1|^3.0",
+        "symfony/form": "^2.1|^3.0",
+        "symfony/validator": "^2.1|^3.0",
+        "symfony/translation": "^2.1|^3.0",
+        "doctrine/orm": "^2.2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.6",
-        "mockery/mockery": "0.9.*"
+        "phpunit/phpunit": "^4.6",
+        "mockery/mockery": "^0.9"
+    },
+    "conflict": {
+        "doctrine/orm": "2.4.7",
+        "symfony/framework-bundle": "2.5.0",
+        "symfony/security": "2.5.0,2.7.3",
+        "symfony/form": "2.5.0,2.7.3",
+        "symfony/validator": "2.5.0",
+        "symfony/translation": "2.5.0"
     },
     "autoload": {
         "psr-4": { "Dmishh\\SettingsBundle\\": "" }
